--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html
     overflow: hidden;
 }
 
+img{
+    border-radius: 5px;
+}
+
 body
 {
     font-family: 'Raleway', sans-serif;
@@ -644,6 +648,7 @@ h2.sub-title{
 .single-post .site-content
 {
     width: 970px;
+    transition: .5s;
 }
 
 .single-post .content-wrap img
@@ -652,6 +657,7 @@ h2.sub-title{
     max-height: 100%;
     width: auto;
     height: auto;
+    border-radius: 15px;
 }
 
 .single-post h1.entry-title
