--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ img{
     border-radius: 5px;
 }
 
+img>div
+		{
+	font-family: 'Raleway', sans-serif;
+    font-size: 15px; 
+    color: #f40010;	
+		}
+
 body
 {
     font-family: 'Raleway', sans-serif;
